--- a/Banking Database.ipynb
+++ b/Banking Database.ipynb
@@ -2,11 +2,280 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "abc46e7b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Import libraries\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# suppress warnings from final output\n",
+    "import warnings\n",
+    "warnings.simplefilter(\"ignore\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b1efa31",
+   "metadata": {},
+   "source": [
+    "# Read in bank_marketing.csv as a pandas DataFrame.¶"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "308a5ca9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>client_id</th>\n",
+       "      <th>age</th>\n",
+       "      <th>job</th>\n",
+       "      <th>marital</th>\n",
+       "      <th>education</th>\n",
+       "      <th>credit_default</th>\n",
+       "      <th>housing</th>\n",
+       "      <th>loan</th>\n",
+       "      <th>contact</th>\n",
+       "      <th>month</th>\n",
+       "      <th>...</th>\n",
+       "      <th>campaign</th>\n",
+       "      <th>pdays</th>\n",
+       "      <th>previous</th>\n",
+       "      <th>poutcome</th>\n",
+       "      <th>emp_var_rate</th>\n",
+       "      <th>cons_price_idx</th>\n",
+       "      <th>cons_conf_idx</th>\n",
+       "      <th>euribor3m</th>\n",
+       "      <th>nr_employed</th>\n",
+       "      <th>y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>56</td>\n",
+       "      <td>housemaid</td>\n",
+       "      <td>married</td>\n",
+       "      <td>basic.4y</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>telephone</td>\n",
+       "      <td>may</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>999</td>\n",
+       "      <td>0</td>\n",
+       "      <td>nonexistent</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>93.994</td>\n",
+       "      <td>-36.4</td>\n",
+       "      <td>4.857</td>\n",
+       "      <td>5191.0</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>57</td>\n",
+       "      <td>services</td>\n",
+       "      <td>married</td>\n",
+       "      <td>high.school</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>telephone</td>\n",
+       "      <td>may</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>999</td>\n",
+       "      <td>0</td>\n",
+       "      <td>nonexistent</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>93.994</td>\n",
+       "      <td>-36.4</td>\n",
+       "      <td>4.857</td>\n",
+       "      <td>5191.0</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>37</td>\n",
+       "      <td>services</td>\n",
+       "      <td>married</td>\n",
+       "      <td>high.school</td>\n",
+       "      <td>no</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>no</td>\n",
+       "      <td>telephone</td>\n",
+       "      <td>may</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>999</td>\n",
+       "      <td>0</td>\n",
+       "      <td>nonexistent</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>93.994</td>\n",
+       "      <td>-36.4</td>\n",
+       "      <td>4.857</td>\n",
+       "      <td>5191.0</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>40</td>\n",
+       "      <td>admin.</td>\n",
+       "      <td>married</td>\n",
+       "      <td>basic.6y</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>telephone</td>\n",
+       "      <td>may</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>999</td>\n",
+       "      <td>0</td>\n",
+       "      <td>nonexistent</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>93.994</td>\n",
+       "      <td>-36.4</td>\n",
+       "      <td>4.857</td>\n",
+       "      <td>5191.0</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>56</td>\n",
+       "      <td>services</td>\n",
+       "      <td>married</td>\n",
+       "      <td>high.school</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>telephone</td>\n",
+       "      <td>may</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>999</td>\n",
+       "      <td>0</td>\n",
+       "      <td>nonexistent</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>93.994</td>\n",
+       "      <td>-36.4</td>\n",
+       "      <td>4.857</td>\n",
+       "      <td>5191.0</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 22 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   client_id  age        job  marital    education credit_default housing  \\\n",
+       "0          0   56  housemaid  married     basic.4y             no      no   \n",
+       "1          1   57   services  married  high.school        unknown      no   \n",
+       "2          2   37   services  married  high.school             no     yes   \n",
+       "3          3   40     admin.  married     basic.6y             no      no   \n",
+       "4          4   56   services  married  high.school             no      no   \n",
+       "\n",
+       "  loan    contact month  ...  campaign  pdays  previous     poutcome  \\\n",
+       "0   no  telephone   may  ...         1    999         0  nonexistent   \n",
+       "1   no  telephone   may  ...         1    999         0  nonexistent   \n",
+       "2   no  telephone   may  ...         1    999         0  nonexistent   \n",
+       "3   no  telephone   may  ...         1    999         0  nonexistent   \n",
+       "4  yes  telephone   may  ...         1    999         0  nonexistent   \n",
+       "\n",
+       "   emp_var_rate cons_price_idx  cons_conf_idx  euribor3m  nr_employed   y  \n",
+       "0           1.1         93.994          -36.4      4.857       5191.0  no  \n",
+       "1           1.1         93.994          -36.4      4.857       5191.0  no  \n",
+       "2           1.1         93.994          -36.4      4.857       5191.0  no  \n",
+       "3           1.1         93.994          -36.4      4.857       5191.0  no  \n",
+       "4           1.1         93.994          -36.4      4.857       5191.0  no  \n",
+       "\n",
+       "[5 rows x 22 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Read in bank_marketing.csv as a pandas DataFrame.\n",
+    "bank_marketing_data = pd.read_csv(\"bank_marketing.csv\")\n",
+    "bank_marketing_data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3fb7f16",
+   "metadata": {},
+   "source": [
+    "Instruction 2:\n",
+    "Split the data into three DataFrames using information provided about the desired tables as your guide:\n",
+    "\n",
+    "one with information about the client,\n",
+    "another containing campaign data, and\n",
+    "a third to store information about economics at the time of the campaign."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "344fc79a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define the columns for each table\n",
+    "client_columns = ['client_id', 'age', 'job', 'marital', 'education', 'credit_default', 'housing', 'loan']\n",
+    "campaign_columns = ['client_id', 'campaign', 'duration', 'pdays', 'previous', 'poutcome', 'y', 'month', 'day']\n",
+    "economic_columns = ['client_id', 'emp_var_rate', 'cons_price_idx', 'euribor3m', 'nr_employed']\n",
+    "\n",
+    "# Create Dataframes for each table\n",
+    "client = bank_marketing_data[client_columns]\n",
+    "campaign = bank_marketing_data[campaign_columns]\n",
+    "economics = bank_marketing_data[economic_columns]\n",
+    "\n",
+    "# Print the first few rows of each DataFrame to verify the split\n",
+    "print(\"Client Data:\")\n",
+    "print(client.head())\n",
+    "\n",
+    "print(\"\\nCampaign Data:\")\n",
+    "print(campaign.head())\n",
+    "\n",
+    "print(\"\\nEconomic Data:\")\n",
+    "print(economics.head())"
+   ]
   }
  ],
  "metadata": {
